Added a .gitignore and removed the checkpoints directory.

--- a/Week 3 Assignment - Segmentation and Clustering in Toronto.ipynb
+++ b/Week 3 Assignment - Segmentation and Clustering in Toronto.ipynb
@@ -4,35 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IBM Applied Data Science Capstone Project\n",
-    "This notebook will be used for the capstone project of the Coursera IBM Applied Data Science specialisation. "
+    "# Segmenting and Clustering Neighbourhoods in Toronto, Canada"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Capstone Project Course!\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Hello Capstone Project Course!\")"
+    "import pandas as pd"
    ]
   },
   {
