--- a/Coursera IBM Capstone Project.ipynb
+++ b/Coursera IBM Capstone Project.ipynb
@@ -5,17 +5,16 @@
    "metadata": {},
    "source": [
     "# IBM Applied Data Science Capstone Project\n",
-    "This notebook will be used for the capstone project of the Coursera IBM Applied Data Science specialisation. "
+    "## Geographical Expansion Options for Coffee Shop Owners in Marlow, UK\n",
+    "This notebook will be used to drive the above analysis and to provide supporting information the reports and presentation/blog for the capstone project of the Coursera IBM Applied Data Science specialisation. "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
+    "## Preparation\n",
+    "Let's start by getting all of the libraries that we need to perform the analysis"
    ]
   },
   {
@@ -27,12 +26,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello Capstone Project Course!\n"
+      "Collecting package metadata (current_repodata.json): ...working... done\n",
+      "Solving environment: ...working... done\n",
+      "\n",
+      "## Package Plan ##\n",
+      "\n",
+      "  environment location: C:\\dev\\anaconda\n",
+      "\n",
+      "  added / updated specs:\n",
+      "    - geopy\n",
+      "\n",
+      "\n",
+      "The following packages will be downloaded:\n",
+      "\n",
+      "    package                    |            build\n",
+      "    ---------------------------|-----------------\n",
+      "    geographiclib-1.50         |             py_0          34 KB  conda-forge\n",
+      "    geopy-1.22.0               |     pyh9f0ad1d_0          63 KB  conda-forge\n",
+      "    ------------------------------------------------------------\n",
+      "                                           Total:          97 KB\n",
+      "\n",
+      "The following NEW packages will be INSTALLED:\n",
+      "\n",
+      "  geographiclib      conda-forge/noarch::geographiclib-1.50-py_0\n",
+      "  geopy              conda-forge/noarch::geopy-1.22.0-pyh9f0ad1d_0\n",
+      "\n",
+      "\n",
+      "\n",
+      "Downloading and Extracting Packages\n",
+      "\n",
+      "geographiclib-1.50   | 34 KB     |            |   0% \n",
+      "geographiclib-1.50   | 34 KB     | ####7      |  47% \n",
+      "geographiclib-1.50   | 34 KB     | ########## | 100% \n",
+      "\n",
+      "geopy-1.22.0         | 63 KB     |            |   0% \n",
+      "geopy-1.22.0         | 63 KB     | ########## | 100% \n",
+      "Preparing transaction: ...working... done\n",
+      "Verifying transaction: ...working... done\n",
+      "Executing transaction: ...working... done\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello Capstone Project Course!\")"
+    "!conda install -c conda-forge geopy --yes\n",
+    "from geopy.geocoders import Nominatim\n",
+    "\n",
+    "import requests # an HTTP library that we'll use for accessing FourSquare\n",
+    "\n",
+    "import folium # we'll use this to find towns within a radius of Marlow\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting up FourSquare"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CLIENT_ID = 'AZKXH5PM02UGZGWNHWEPHVWEKAZ5RWSNRYBZNSSJT3EOBC2N' # your Foursquare ID\n",
+    "CLIENT_SECRET = 'XGWLP3PRPFSBGN0W534NRHRNNYT4IN5UT5QRJMBD4TAIOML5' # your Foursquare Secret\n",
+    "VERSION = '20180605' # Foursquare API version"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Selecting the candidate towns\n",
+    "We'll use FourSquare to find Marlow's latitude and longitude, then Folium to select the nearest ten towns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Location' object has no attribute 'loc'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-c551caf9272c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mgeolocator\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNominatim\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0muser_agent\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"foursquare_agent\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mmarlow_location\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgeolocator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgeocode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Marlow, UK\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mmarlow_map\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfolium\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMap\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mlocation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmarlow_location\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Latitude\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmarlow_location\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Longitude\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m,\u001b[0m \u001b[0mzoom_start\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m12\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Location' object has no attribute 'loc'"
+     ]
+    }
+   ],
+   "source": [
+    "geolocator = Nominatim(user_agent=\"foursquare_agent\")\n",
+    "marlow_location = geolocator.geocode(\"Marlow, UK\")\n",
+    "marlow_map = folium.Map( location=[marlow_location.longitude,marlow_location.latitude] , zoom_start = 12 )"
    ]
   },
   {
